Add a guard that the current tab exists on a window activated event

This fixes a crash

BUG: 322135
Fixed-in: 0.6.3
Reviewed-by: Sven Brauch